With minimum font sizes, otherwise "mySociety is a project of..." wraps about some of the footer nav. (Francis, committing from angie.mysociety.org, fix by Matthew :)

--- a/ms/web/wordpress_2_6/wp-content/themes/default/style.css
+++ b/ms/web/wordpress_2_6/wp-content/themes/default/style.css
@@ -171,8 +171,7 @@ div.projects-entry h3 img {
 #divFooter dt {float:left; width:13em; color:#616161;clear:left;font-weight:bold;}
 #divFooter dd {float:left; width:50em; padding-bottom:0.5em;}
 #divFooter dd ul li {padding-right:0.8em; line-height:1.5em;}
-#divFooter p {margin:0;padding:0;color:#616161; position:relative; top:-0.4em;}
-
+#divFooter p {margin:0;padding:0;color:#616161; position:relative; top:-0.4em; clear: both; }
 
 /* Styles for wordpress elements */
 .wp-caption.alignleft { float: left;margin: 0px 15px 5px 0px;}
